--- a/Bonsai.Editor/Properties/Resources.resx
+++ b/Bonsai.Editor/Properties/Resources.resx
@@ -274,8 +274,8 @@ NOTE: You will have to restart Bonsai for any changes to take effect.</value>
     <value>There was an error while reordering the selected nodes:
 {0}</value>
   </data>
-  <data name="CreateSubjectSourceAction" xml:space="preserve">
-    <value>Create Subject Source</value>
+  <data name="CreateGenericSourceAction" xml:space="preserve">
+    <value>Create Generic Source</value>
   </data>
   <data name="SubjectTypeAction" xml:space="preserve">
     <value>Subject Type</value>
