--- a/Bonsai.Editor/Properties/Resources.resx
+++ b/Bonsai.Editor/Properties/Resources.resx
@@ -275,7 +275,7 @@ NOTE: You will have to restart Bonsai for any changes to take effect.</value>
 {0}</value>
   </data>
   <data name="CreateGenericSourceAction" xml:space="preserve">
-    <value>Create Generic Source</value>
+    <value>Create Source ({0})</value>
   </data>
   <data name="SubjectTypeAction" xml:space="preserve">
     <value>Subject Type</value>
