--- a/Bonsai.Editor/Properties/Resources.resx
+++ b/Bonsai.Editor/Properties/Resources.resx
@@ -206,11 +206,11 @@ Copyright (c) .NET Foundation and Contributors</value>
   <data name="SaveElement_Error_Caption" xml:space="preserve">
     <value>Save Error</value>
   </data>
-  <data name="UpdateWorkflow_Warning" xml:space="preserve">
-    <value>This workflow file has been created with an older version of Bonsai. Further modifications will be incompatible with previous versions.</value>
+  <data name="UpgradeWorkflow_Warning" xml:space="preserve">
+    <value>This workflow file has been upgraded to the latest version of Bonsai. Further modifications will be incompatible with previous versions.</value>
   </data>
-  <data name="UpdateWorkflow_Warning_Caption" xml:space="preserve">
-    <value>Update Workflow</value>
+  <data name="UpgradeWorkflow_Warning_Caption" xml:space="preserve">
+    <value>Workflow Upgraded</value>
   </data>
   <data name="SaveLayout_Error" xml:space="preserve">
     <value>There was an error saving the visualizer layout:
@@ -228,8 +228,8 @@ Copyright (c) .NET Foundation and Contributors</value>
   <data name="PackageUpdatesAvailable_Notification" xml:space="preserve">
     <value>Package updates are available</value>
   </data>
-  <data name="UpdateWorkflow_Error" xml:space="preserve">
-    <value>There was an error while updating the workflow. Please check if there are any missing packages that need to be installed before trying to upgrade again.</value>
+  <data name="UpgradeWorkflow_Error" xml:space="preserve">
+    <value>There was an error while upgrading the workflow. Please check if there are any missing packages that need to be installed before trying to upgrade again.</value>
   </data>
   <data name="Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Bonsai.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
